codigo/ArielArchivos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INIT
    LBRACKET
    RBRACKET
    SELF

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> lista_sentencias sentencia
Rule 3     lista_sentencias -> <empty>
Rule 4     sentencia -> declaracion_variable_ariel
Rule 5     sentencia -> asignacion_ariel
Rule 6     sentencia -> mientras_ariel
Rule 7     sentencia -> si_minimo
Rule 8     sentencia -> definicion_funcion_ariel
Rule 9     sentencia -> definicion_clase_minimo
Rule 10    sentencia -> retorno_completo
Rule 11    sentencia -> expresion PUNTOYCOMA
Rule 12    declaracion_variable_ariel -> VAR IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA
Rule 13    declaracion_variable_ariel -> LET IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA
Rule 14    tipo_opcional -> DOSPTOS IDENTIFICADOR
Rule 15    tipo_opcional -> <empty>
Rule 16    asignacion_opcional -> ASIGNAR expresion
Rule 17    asignacion_opcional -> <empty>
Rule 18    asignacion_ariel -> IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA
Rule 19    mientras_ariel -> WHILE LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE
Rule 20    si_minimo -> IF LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE
Rule 21    si_minimo -> IF LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE ELSE LBRACE lista_sentencias RBRACE
Rule 22    definicion_clase_minimo -> CLASS IDENTIFICADOR LBRACE lista_miembros_clase RBRACE
Rule 23    lista_miembros_clase -> lista_miembros_clase miembro_clase
Rule 24    lista_miembros_clase -> <empty>
Rule 25    miembro_clase -> declaracion_variable_ariel
Rule 26    miembro_clase -> definicion_funcion_ariel
Rule 27    definicion_funcion_ariel -> FUNC IDENTIFICADOR LPAREN lista_parametros_ariel RPAREN tipo_retorno LBRACE lista_sentencias RBRACE
Rule 28    lista_parametros_ariel -> lista_parametros_ariel COMA parametro_ariel
Rule 29    lista_parametros_ariel -> parametro_ariel
Rule 30    lista_parametros_ariel -> <empty>
Rule 31    parametro_ariel -> IDENTIFICADOR DOSPTOS IDENTIFICADOR asignacion_opcional
Rule 32    tipo_retorno -> FLECHA IDENTIFICADOR
Rule 33    tipo_retorno -> <empty>
Rule 34    retorno_completo -> RETURN expresion PUNTOYCOMA
Rule 35    expresion -> LPAREN lista_expresiones_ariel RPAREN
Rule 36    expresion -> IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
Rule 37    lista_expresiones_ariel -> lista_expresiones_ariel COMA expresion
Rule 38    lista_expresiones_ariel -> expresion
Rule 39    lista_expresiones_ariel -> <empty>
Rule 40    expresion -> expresion PUNTO IDENTIFICADOR
Rule 41    expresion -> expresion SUMA expresion
Rule 42    expresion -> expresion RESTA expresion
Rule 43    expresion -> expresion MULT expresion
Rule 44    expresion -> expresion DIV expresion
Rule 45    expresion -> expresion MOD expresion
Rule 46    expresion -> expresion IGUAL expresion
Rule 47    expresion -> expresion DIFERENTE expresion
Rule 48    expresion -> expresion MENOR expresion
Rule 49    expresion -> expresion MENORIGUAL expresion
Rule 50    expresion -> expresion MAYOR expresion
Rule 51    expresion -> expresion MAYORIGUAL expresion
Rule 52    expresion -> expresion AND expresion
Rule 53    expresion -> expresion OR expresion
Rule 54    expresion -> NOT expresion
Rule 55    expresion -> RESTA expresion
Rule 56    expresion -> ENTERO
Rule 57    expresion -> DECIMAL
Rule 58    expresion -> CADENA
Rule 59    expresion -> TRUE
Rule 60    expresion -> FALSE
Rule 61    expresion -> IDENTIFICADOR

Terminals, with rules where they appear

AND                  : 52
ASIGNAR              : 16 18
CADENA               : 58
CLASS                : 22
COMA                 : 28 37
DECIMAL              : 57
DIFERENTE            : 47
DIV                  : 44
DOSPTOS              : 14 31
ELSE                 : 21
ENTERO               : 56
FALSE                : 60
FLECHA               : 32
FUNC                 : 27
IDENTIFICADOR        : 12 13 14 18 22 27 31 31 32 36 40 61
IF                   : 20 21
IGUAL                : 46
INIT                 : 
LBRACE               : 19 20 21 21 22 27
LBRACKET             : 
LET                  : 13
LPAREN               : 19 20 21 27 35 36
MAYOR                : 50
MAYORIGUAL           : 51
MENOR                : 48
MENORIGUAL           : 49
MOD                  : 45
MULT                 : 43
NOT                  : 54
OR                   : 53
PUNTO                : 40
PUNTOYCOMA           : 11 12 13 18 34
RBRACE               : 19 20 21 21 22 27
RBRACKET             : 
RESTA                : 42 55
RETURN               : 34
RPAREN               : 19 20 21 27 35 36
SELF                 : 
SUMA                 : 41
TRUE                 : 59
VAR                  : 12
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

asignacion_ariel     : 5
asignacion_opcional  : 12 13 31
declaracion_variable_ariel : 4 25
definicion_clase_minimo : 9
definicion_funcion_ariel : 8 26
expresion            : 11 16 18 19 20 21 34 37 38 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55
lista_expresiones_ariel : 35 36 37
lista_miembros_clase : 22 23
lista_parametros_ariel : 27 28
lista_sentencias     : 1 2 19 20 21 21 27
miembro_clase        : 23
mientras_ariel       : 6
parametro_ariel      : 28 29
programa             : 0
retorno_completo     : 10
sentencia            : 2
si_minimo            : 7
tipo_opcional        : 12 13
tipo_retorno         : 27

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . lista_sentencias sentencia
    (3) lista_sentencias -> .

    VAR             reduce using rule 3 (lista_sentencias -> .)
    LET             reduce using rule 3 (lista_sentencias -> .)
    IDENTIFICADOR   reduce using rule 3 (lista_sentencias -> .)
    WHILE           reduce using rule 3 (lista_sentencias -> .)
    IF              reduce using rule 3 (lista_sentencias -> .)
    FUNC            reduce using rule 3 (lista_sentencias -> .)
    CLASS           reduce using rule 3 (lista_sentencias -> .)
    RETURN          reduce using rule 3 (lista_sentencias -> .)
    LPAREN          reduce using rule 3 (lista_sentencias -> .)
    NOT             reduce using rule 3 (lista_sentencias -> .)
    RESTA           reduce using rule 3 (lista_sentencias -> .)
    ENTERO          reduce using rule 3 (lista_sentencias -> .)
    DECIMAL         reduce using rule 3 (lista_sentencias -> .)
    CADENA          reduce using rule 3 (lista_sentencias -> .)
    TRUE            reduce using rule 3 (lista_sentencias -> .)
    FALSE           reduce using rule 3 (lista_sentencias -> .)
    $end            reduce using rule 3 (lista_sentencias -> .)

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (2) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . declaracion_variable_ariel
    (5) sentencia -> . asignacion_ariel
    (6) sentencia -> . mientras_ariel
    (7) sentencia -> . si_minimo
    (8) sentencia -> . definicion_funcion_ariel
    (9) sentencia -> . definicion_clase_minimo
    (10) sentencia -> . retorno_completo
    (11) sentencia -> . expresion PUNTOYCOMA
    (12) declaracion_variable_ariel -> . VAR IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA
    (13) declaracion_variable_ariel -> . LET IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA
    (18) asignacion_ariel -> . IDENTIFICADOR ASIGNAR expresion PUNTOYCOMA
    (19) mientras_ariel -> . WHILE LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE
    (20) si_minimo -> . IF LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE
    (21) si_minimo -> . IF LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE ELSE LBRACE lista_sentencias RBRACE
    (27) definicion_funcion_ariel -> . FUNC IDENTIFICADOR LPAREN lista_parametros_ariel RPAREN tipo_retorno LBRACE lista_sentencias RBRACE
    (22) definicion_clase_minimo -> . CLASS IDENTIFICADOR LBRACE lista_miembros_clase RBRACE
    (34) retorno_completo -> . RETURN expresion PUNTOYCOMA
    (35) expresion -> . LPAREN lista_expresiones_ariel RPAREN
    (36) expresion -> . IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
    (40) expresion -> . expresion PUNTO IDENTIFICADOR
    (41) expresion -> . expresion SUMA expresion
    (42) expresion -> . expresion RESTA expresion
    (43) expresion -> . expresion MULT expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion MOD expresion
    (46) expresion -> . expresion IGUAL expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion MAYOR expresion
    (51) expresion -> . expresion MAYORIGUAL expresion
    (52) expresion -> . expresion AND expresion
    (53) expresion -> . expresion OR expresion
    (54) expresion -> . NOT expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . ENTERO
    (57) expresion -> . DECIMAL
    (58) expresion -> . CADENA
    (59) expresion -> . TRUE
    (60) expresion -> . FALSE
    (61) expresion -> . IDENTIFICADOR

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    VAR             shift and go to state 12
    LET             shift and go to state 14
    IDENTIFICADOR   shift and go to state 13
    WHILE           shift and go to state 15
    IF              shift and go to state 17
    FUNC            shift and go to state 18
    CLASS           shift and go to state 19
    RETURN          shift and go to state 20
    LPAREN          shift and go to state 16
    NOT             shift and go to state 22
    RESTA           shift and go to state 21
    ENTERO          shift and go to state 23
    DECIMAL         shift and go to state 24
    CADENA          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    sentencia                      shift and go to state 3
    declaracion_variable_ariel     shift and go to state 4
    asignacion_ariel               shift and go to state 5
    mientras_ariel                 shift and go to state 6
    si_minimo                      shift and go to state 7
    definicion_funcion_ariel       shift and go to state 8
    definicion_clase_minimo        shift and go to state 9
    retorno_completo               shift and go to state 10
    expresion                      shift and go to state 11

state 3

    (2) lista_sentencias -> lista_sentencias sentencia .

    VAR             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LET             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    IDENTIFICADOR   reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    WHILE           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    IF              reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    FUNC            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CLASS           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    RETURN          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    LPAREN          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    NOT             reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    RESTA           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    ENTERO          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    DECIMAL         reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    CADENA          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    TRUE            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    FALSE           reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)
    RBRACE          reduce using rule 2 (lista_sentencias -> lista_sentencias sentencia .)


state 4

    (4) sentencia -> declaracion_variable_ariel .

    VAR             reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    LET             reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    IDENTIFICADOR   reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    WHILE           reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    IF              reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    FUNC            reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    CLASS           reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    RETURN          reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    LPAREN          reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    NOT             reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    RESTA           reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    ENTERO          reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    DECIMAL         reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    CADENA          reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    TRUE            reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    FALSE           reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    $end            reduce using rule 4 (sentencia -> declaracion_variable_ariel .)
    RBRACE          reduce using rule 4 (sentencia -> declaracion_variable_ariel .)


state 5

    (5) sentencia -> asignacion_ariel .

    VAR             reduce using rule 5 (sentencia -> asignacion_ariel .)
    LET             reduce using rule 5 (sentencia -> asignacion_ariel .)
    IDENTIFICADOR   reduce using rule 5 (sentencia -> asignacion_ariel .)
    WHILE           reduce using rule 5 (sentencia -> asignacion_ariel .)
    IF              reduce using rule 5 (sentencia -> asignacion_ariel .)
    FUNC            reduce using rule 5 (sentencia -> asignacion_ariel .)
    CLASS           reduce using rule 5 (sentencia -> asignacion_ariel .)
    RETURN          reduce using rule 5 (sentencia -> asignacion_ariel .)
    LPAREN          reduce using rule 5 (sentencia -> asignacion_ariel .)
    NOT             reduce using rule 5 (sentencia -> asignacion_ariel .)
    RESTA           reduce using rule 5 (sentencia -> asignacion_ariel .)
    ENTERO          reduce using rule 5 (sentencia -> asignacion_ariel .)
    DECIMAL         reduce using rule 5 (sentencia -> asignacion_ariel .)
    CADENA          reduce using rule 5 (sentencia -> asignacion_ariel .)
    TRUE            reduce using rule 5 (sentencia -> asignacion_ariel .)
    FALSE           reduce using rule 5 (sentencia -> asignacion_ariel .)
    $end            reduce using rule 5 (sentencia -> asignacion_ariel .)
    RBRACE          reduce using rule 5 (sentencia -> asignacion_ariel .)


state 6

    (6) sentencia -> mientras_ariel .

    VAR             reduce using rule 6 (sentencia -> mientras_ariel .)
    LET             reduce using rule 6 (sentencia -> mientras_ariel .)
    IDENTIFICADOR   reduce using rule 6 (sentencia -> mientras_ariel .)
    WHILE           reduce using rule 6 (sentencia -> mientras_ariel .)
    IF              reduce using rule 6 (sentencia -> mientras_ariel .)
    FUNC            reduce using rule 6 (sentencia -> mientras_ariel .)
    CLASS           reduce using rule 6 (sentencia -> mientras_ariel .)
    RETURN          reduce using rule 6 (sentencia -> mientras_ariel .)
    LPAREN          reduce using rule 6 (sentencia -> mientras_ariel .)
    NOT             reduce using rule 6 (sentencia -> mientras_ariel .)
    RESTA           reduce using rule 6 (sentencia -> mientras_ariel .)
    ENTERO          reduce using rule 6 (sentencia -> mientras_ariel .)
    DECIMAL         reduce using rule 6 (sentencia -> mientras_ariel .)
    CADENA          reduce using rule 6 (sentencia -> mientras_ariel .)
    TRUE            reduce using rule 6 (sentencia -> mientras_ariel .)
    FALSE           reduce using rule 6 (sentencia -> mientras_ariel .)
    $end            reduce using rule 6 (sentencia -> mientras_ariel .)
    RBRACE          reduce using rule 6 (sentencia -> mientras_ariel .)


state 7

    (7) sentencia -> si_minimo .

    VAR             reduce using rule 7 (sentencia -> si_minimo .)
    LET             reduce using rule 7 (sentencia -> si_minimo .)
    IDENTIFICADOR   reduce using rule 7 (sentencia -> si_minimo .)
    WHILE           reduce using rule 7 (sentencia -> si_minimo .)
    IF              reduce using rule 7 (sentencia -> si_minimo .)
    FUNC            reduce using rule 7 (sentencia -> si_minimo .)
    CLASS           reduce using rule 7 (sentencia -> si_minimo .)
    RETURN          reduce using rule 7 (sentencia -> si_minimo .)
    LPAREN          reduce using rule 7 (sentencia -> si_minimo .)
    NOT             reduce using rule 7 (sentencia -> si_minimo .)
    RESTA           reduce using rule 7 (sentencia -> si_minimo .)
    ENTERO          reduce using rule 7 (sentencia -> si_minimo .)
    DECIMAL         reduce using rule 7 (sentencia -> si_minimo .)
    CADENA          reduce using rule 7 (sentencia -> si_minimo .)
    TRUE            reduce using rule 7 (sentencia -> si_minimo .)
    FALSE           reduce using rule 7 (sentencia -> si_minimo .)
    $end            reduce using rule 7 (sentencia -> si_minimo .)
    RBRACE          reduce using rule 7 (sentencia -> si_minimo .)


state 8

    (8) sentencia -> definicion_funcion_ariel .

    VAR             reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    LET             reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    IDENTIFICADOR   reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    WHILE           reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    IF              reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    FUNC            reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    CLASS           reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    RETURN          reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    LPAREN          reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    NOT             reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    RESTA           reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    ENTERO          reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    DECIMAL         reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    CADENA          reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    TRUE            reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    FALSE           reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    $end            reduce using rule 8 (sentencia -> definicion_funcion_ariel .)
    RBRACE          reduce using rule 8 (sentencia -> definicion_funcion_ariel .)


state 9

    (9) sentencia -> definicion_clase_minimo .

    VAR             reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    LET             reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    IDENTIFICADOR   reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    WHILE           reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    IF              reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    FUNC            reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    CLASS           reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    RETURN          reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    LPAREN          reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    NOT             reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    RESTA           reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    ENTERO          reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    DECIMAL         reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    CADENA          reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    TRUE            reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    FALSE           reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    $end            reduce using rule 9 (sentencia -> definicion_clase_minimo .)
    RBRACE          reduce using rule 9 (sentencia -> definicion_clase_minimo .)


state 10

    (10) sentencia -> retorno_completo .

    VAR             reduce using rule 10 (sentencia -> retorno_completo .)
    LET             reduce using rule 10 (sentencia -> retorno_completo .)
    IDENTIFICADOR   reduce using rule 10 (sentencia -> retorno_completo .)
    WHILE           reduce using rule 10 (sentencia -> retorno_completo .)
    IF              reduce using rule 10 (sentencia -> retorno_completo .)
    FUNC            reduce using rule 10 (sentencia -> retorno_completo .)
    CLASS           reduce using rule 10 (sentencia -> retorno_completo .)
    RETURN          reduce using rule 10 (sentencia -> retorno_completo .)
    LPAREN          reduce using rule 10 (sentencia -> retorno_completo .)
    NOT             reduce using rule 10 (sentencia -> retorno_completo .)
    RESTA           reduce using rule 10 (sentencia -> retorno_completo .)
    ENTERO          reduce using rule 10 (sentencia -> retorno_completo .)
    DECIMAL         reduce using rule 10 (sentencia -> retorno_completo .)
    CADENA          reduce using rule 10 (sentencia -> retorno_completo .)
    TRUE            reduce using rule 10 (sentencia -> retorno_completo .)
    FALSE           reduce using rule 10 (sentencia -> retorno_completo .)
    $end            reduce using rule 10 (sentencia -> retorno_completo .)
    RBRACE          reduce using rule 10 (sentencia -> retorno_completo .)


state 11

    (11) sentencia -> expresion . PUNTOYCOMA
    (40) expresion -> expresion . PUNTO IDENTIFICADOR
    (41) expresion -> expresion . SUMA expresion
    (42) expresion -> expresion . RESTA expresion
    (43) expresion -> expresion . MULT expresion
    (44) expresion -> expresion . DIV expresion
    (45) expresion -> expresion . MOD expresion
    (46) expresion -> expresion . IGUAL expresion
    (47) expresion -> expresion . DIFERENTE expresion
    (48) expresion -> expresion . MENOR expresion
    (49) expresion -> expresion . MENORIGUAL expresion
    (50) expresion -> expresion . MAYOR expresion
    (51) expresion -> expresion . MAYORIGUAL expresion
    (52) expresion -> expresion . AND expresion
    (53) expresion -> expresion . OR expresion

    PUNTOYCOMA      shift and go to state 28
    PUNTO           shift and go to state 29
    SUMA            shift and go to state 30
    RESTA           shift and go to state 31
    MULT            shift and go to state 32
    DIV             shift and go to state 33
    MOD             shift and go to state 34
    IGUAL           shift and go to state 35
    DIFERENTE       shift and go to state 36
    MENOR           shift and go to state 37
    MENORIGUAL      shift and go to state 38
    MAYOR           shift and go to state 39
    MAYORIGUAL      shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42


state 12

    (12) declaracion_variable_ariel -> VAR . IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 43


state 13

    (18) asignacion_ariel -> IDENTIFICADOR . ASIGNAR expresion PUNTOYCOMA
    (36) expresion -> IDENTIFICADOR . LPAREN lista_expresiones_ariel RPAREN
    (61) expresion -> IDENTIFICADOR .

    ASIGNAR         shift and go to state 44
    LPAREN          shift and go to state 45
    PUNTOYCOMA      reduce using rule 61 (expresion -> IDENTIFICADOR .)
    PUNTO           reduce using rule 61 (expresion -> IDENTIFICADOR .)
    SUMA            reduce using rule 61 (expresion -> IDENTIFICADOR .)
    RESTA           reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MULT            reduce using rule 61 (expresion -> IDENTIFICADOR .)
    DIV             reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MOD             reduce using rule 61 (expresion -> IDENTIFICADOR .)
    IGUAL           reduce using rule 61 (expresion -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MENOR           reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MENORIGUAL      reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MAYOR           reduce using rule 61 (expresion -> IDENTIFICADOR .)
    MAYORIGUAL      reduce using rule 61 (expresion -> IDENTIFICADOR .)
    AND             reduce using rule 61 (expresion -> IDENTIFICADOR .)
    OR              reduce using rule 61 (expresion -> IDENTIFICADOR .)


state 14

    (13) declaracion_variable_ariel -> LET . IDENTIFICADOR tipo_opcional asignacion_opcional PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 46


state 15

    (19) mientras_ariel -> WHILE . LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE

    LPAREN          shift and go to state 47


state 16

    (35) expresion -> LPAREN . lista_expresiones_ariel RPAREN
    (37) lista_expresiones_ariel -> . lista_expresiones_ariel COMA expresion
    (38) lista_expresiones_ariel -> . expresion
    (39) lista_expresiones_ariel -> .
    (35) expresion -> . LPAREN lista_expresiones_ariel RPAREN
    (36) expresion -> . IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
    (40) expresion -> . expresion PUNTO IDENTIFICADOR
    (41) expresion -> . expresion SUMA expresion
    (42) expresion -> . expresion RESTA expresion
    (43) expresion -> . expresion MULT expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion MOD expresion
    (46) expresion -> . expresion IGUAL expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion MAYOR expresion
    (51) expresion -> . expresion MAYORIGUAL expresion
    (52) expresion -> . expresion AND expresion
    (53) expresion -> . expresion OR expresion
    (54) expresion -> . NOT expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . ENTERO
    (57) expresion -> . DECIMAL
    (58) expresion -> . CADENA
    (59) expresion -> . TRUE
    (60) expresion -> . FALSE
    (61) expresion -> . IDENTIFICADOR

    RPAREN          reduce using rule 39 (lista_expresiones_ariel -> .)
    COMA            reduce using rule 39 (lista_expresiones_ariel -> .)
    LPAREN          shift and go to state 16
    IDENTIFICADOR   shift and go to state 50
    NOT             shift and go to state 22
    RESTA           shift and go to state 21
    ENTERO          shift and go to state 23
    DECIMAL         shift and go to state 24
    CADENA          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    lista_expresiones_ariel        shift and go to state 48
    expresion                      shift and go to state 49

state 17

    (20) si_minimo -> IF . LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE
    (21) si_minimo -> IF . LPAREN expresion RPAREN LBRACE lista_sentencias RBRACE ELSE LBRACE lista_sentencias RBRACE

    LPAREN          shift and go to state 51


state 18

    (27) definicion_funcion_ariel -> FUNC . IDENTIFICADOR LPAREN lista_parametros_ariel RPAREN tipo_retorno LBRACE lista_sentencias RBRACE

    IDENTIFICADOR   shift and go to state 52


state 19

    (22) definicion_clase_minimo -> CLASS . IDENTIFICADOR LBRACE lista_miembros_clase RBRACE

    IDENTIFICADOR   shift and go to state 53


state 20

    (34) retorno_completo -> RETURN . expresion PUNTOYCOMA
    (35) expresion -> . LPAREN lista_expresiones_ariel RPAREN
    (36) expresion -> . IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
    (40) expresion -> . expresion PUNTO IDENTIFICADOR
    (41) expresion -> . expresion SUMA expresion
    (42) expresion -> . expresion RESTA expresion
    (43) expresion -> . expresion MULT expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion MOD expresion
    (46) expresion -> . expresion IGUAL expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion MAYOR expresion
    (51) expresion -> . expresion MAYORIGUAL expresion
    (52) expresion -> . expresion AND expresion
    (53) expresion -> . expresion OR expresion
    (54) expresion -> . NOT expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . ENTERO
    (57) expresion -> . DECIMAL
    (58) expresion -> . CADENA
    (59) expresion -> . TRUE
    (60) expresion -> . FALSE
    (61) expresion -> . IDENTIFICADOR

    LPAREN          shift and go to state 16
    IDENTIFICADOR   shift and go to state 50
    NOT             shift and go to state 22
    RESTA           shift and go to state 21
    ENTERO          shift and go to state 23
    DECIMAL         shift and go to state 24
    CADENA          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expresion                      shift and go to state 54

state 21

    (55) expresion -> RESTA . expresion
    (35) expresion -> . LPAREN lista_expresiones_ariel RPAREN
    (36) expresion -> . IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
    (40) expresion -> . expresion PUNTO IDENTIFICADOR
    (41) expresion -> . expresion SUMA expresion
    (42) expresion -> . expresion RESTA expresion
    (43) expresion -> . expresion MULT expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion MOD expresion
    (46) expresion -> . expresion IGUAL expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion MAYOR expresion
    (51) expresion -> . expresion MAYORIGUAL expresion
    (52) expresion -> . expresion AND expresion
    (53) expresion -> . expresion OR expresion
    (54) expresion -> . NOT expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . ENTERO
    (57) expresion -> . DECIMAL
    (58) expresion -> . CADENA
    (59) expresion -> . TRUE
    (60) expresion -> . FALSE
    (61) expresion -> . IDENTIFICADOR

    LPAREN          shift and go to state 16
    IDENTIFICADOR   shift and go to state 50
    NOT             shift and go to state 22
    RESTA           shift and go to state 21
    ENTERO          shift and go to state 23
    DECIMAL         shift and go to state 24
    CADENA          shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expresion                      shift and go to state 55

state 22

    (54) expresion -> NOT . expresion
    (35) expresion -> . LPAREN lista_expresiones_ariel RPAREN
    (36) expresion -> . IDENTIFICADOR LPAREN lista_expresiones_ariel RPAREN
    (40) expresion -> . expresion PUNTO IDENTIFICADOR
    (41) expresion -> . expresion SUMA expresion
    (42) expresion -> . expresion RESTA expresion
    (43) expresion -> . expresion MULT expresion
    (44) expresion -> . expresion DIV expresion
    (45) expresion -> . expresion MOD expresion
    (46) expresion -> . expresion IGUAL expresion
    (47) expresion -> . expresion DIFERENTE expresion
    (48) expresion -> . expresion MENOR expresion
    (49) expresion -> . expresion MENORIGUAL expresion
    (50) expresion -> . expresion MAYOR expresion
    (51) expresion -> . expresion MAYORIGUAL expresion
    (52) expresion -> . expresion AND expresion
    (53) expresion -> . expresion OR expresion
    (54) expresion -> . NOT expresion
    (55) expresion -> . RESTA expresion
    (56) expresion -> . ENTERO
    (57) expresion -> . DECIMAL
    (58) expresion -> . CADENA
    (59) expresion -> . TRUE
    (60) expresion -> . FALSE
    (61) expresion -> . IDENTIFICADOR
